hugr-llvm/src/extension/snapshots/hugr_llvm__extension__float__test__fneg@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/float.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private double @_hl.main.1(double %0) {
alloca_block:
  %"0" = alloca double, align 8
  %"2_0" = alloca double, align 8
  %"4_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, ptr %"2_0", align 8
  %"2_01" = load double, ptr %"2_0", align 8
  %1 = fneg double %"2_01"
  store double %1, ptr %"4_0", align 8
  %"4_02" = load double, ptr %"4_0", align 8
  store double %"4_02", ptr %"0", align 8
  %"03" = load double, ptr %"0", align 8
  ret double %"03"
}
